Fix error boxes being too large

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1053,7 +1053,7 @@ body {
 
 }
 
-.field_with_errors {
+.field_with_errors input {
   border-color: #f00;
   border: 1px solid red !important;
 }
